--- a/04-built-in-resource-types/Secret/Taskfile.yaml
+++ b/04-built-in-resource-types/Secret/Taskfile.yaml
@@ -49,7 +49,7 @@ tasks:
           --docker-email=foo@bar.com \
           --docker-username=username \
           --docker-password=password \
-          --docker-server=https://index.docker.io/v1
+          --docker-server=https://index.docker.io/v1/
 
   08-apply-dockerconfigjson:
     desc: "Apply a Docker registry secret configuration"
