--- a/06-demo-application/client-react/Taskfile.yaml
+++ b/06-demo-application/client-react/Taskfile.yaml
@@ -8,7 +8,7 @@ tasks:
   build-container-image:
     desc: Build container image
     cmds:
-      - docker build -t {{.IMAGE_REPO}}{{.IMAGE_TAG}} .
+      - docker build -t {{.IMAGE_REPO}}:{{.IMAGE_TAG}} .
 
   build-container-image-multi-arch:
     desc: Build multi-arch container image
