add single service kluctl example

--- a/12-deploying-to-multiple-environments/helm/Taskfile.yaml
+++ b/12-deploying-to-multiple-environments/helm/Taskfile.yaml
@@ -3,17 +3,17 @@ version: "3"
 tasks:
   template-default:
     cmds:
-      - helm template ./api-golang-helm-chart
+      - helm template ./api-golang-helm-chart | yq
     desc: "Render chart yaml with default values"
 
   template-staging:
     cmds:
-      - helm template ./api-golang-helm-chart --values=./api-golang-helm-chart/values.staging.yaml
+      - helm template ./api-golang-helm-chart --values=./api-golang-helm-chart/values.staging.yaml  | yq
     desc: "Render chart yaml with staging values file"
 
   template-production:
     cmds:
-      - helm template ./api-golang-helm-chart --values=./api-golang-helm-chart/values.production.yaml
+      - helm template ./api-golang-helm-chart --values=./api-golang-helm-chart/values.production.yaml  | yq
     desc: "Render chart yaml with production values file"
 
   package:
@@ -24,8 +24,10 @@ tasks:
   push:
     cmds:
       - helm push api-golang-helm-chart-0.1.0.tgz oci://registry-1.docker.io/sidpalas
+    desc: "Push the helm chart to an oci registry"
 
   build-push:
     cmds:
       - task: build
       - task: push
+    desc: "Build & Push the helm chart to an oci registry"
