--- a/12-deploying-to-multiple-environments/kustomize/Taskfile.yaml
+++ b/12-deploying-to-multiple-environments/kustomize/Taskfile.yaml
@@ -4,9 +4,9 @@ tasks:
   render-staging:
     desc: "Render staging configuration"
     cmds:
-      - kubectl kustomize ./staging
+      - kubectl kustomize ./staging | yq
 
   render-production:
     desc: "Render production configuration"
     cmds:
-      - kubectl kustomize ./production
+      - kubectl kustomize ./production | yq
