--- a/12-deploying-to-multiple-environments/kustomize/staging/client-react/patches/IngressRoute.replace-host.yaml
+++ b/12-deploying-to-multiple-environments/kustomize/staging/client-react/patches/IngressRoute.replace-host.yaml
@@ -1,3 +1,3 @@
 - op: replace
   path: /spec/routes/0/match
-  value: "Host(`kubernetes-course.devopsdirective.com`)"
+  value: "Host(`kubernetes-course-staging.devopsdirective.com`)"
