--- a/14-cicd/kluctl-gitops/clusters/production/KluctlDeployment.devops-directive-kubernetes-course.yaml
+++ b/14-cicd/kluctl-gitops/clusters/production/KluctlDeployment.devops-directive-kubernetes-course.yaml
@@ -1,7 +1,7 @@
 apiVersion: gitops.kluctl.io/v1beta1
 kind: KluctlDeployment
 metadata:
-  name: devops-directive-kubernetes-course
+  name: demo-app
   namespace: kluctl-gitops
 spec:
   interval: 5m
