--- a/04-built-in-resource-types/PersistentVolume/kind/PersistentVolume.manual-kind.yaml
+++ b/04-built-in-resource-types/PersistentVolume/kind/PersistentVolume.manual-kind.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: manual-kind
+  name: manual-kind-worker
   labels:
     name: manual-kind
 spec:
@@ -20,3 +20,26 @@ spec:
               operator: In
               values:
                 - kind-worker
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: manual-kind-worker2
+  labels:
+    name: manual-kind
+spec:
+  accessModes:
+    - ReadWriteOnce
+  capacity:
+    storage: 100Mi
+  storageClassName: standard
+  local:
+    path: /some/path/in/container # Replace with the path to your local storage
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - kind-worker2
