--- a/07-deploying-demo-application/load-generator-python/Deployment.yaml
+++ b/07-deploying-demo-application/load-generator-python/Deployment.yaml
@@ -17,17 +17,17 @@ spec:
     spec:
       containers:
         - name: load-generator
-          image: sidpalas/devops-directive-kubernetes-course-load-generator-python:foobarbaz
+          image: sonthh98/devops-directive-kubernetes-course-load-generator-python:foobarbaz
           imagePullPolicy: Always
-          env:
-            - name: API_URL
-              value: http://api-node.demo-app.svc.cluster.local:3000
-            - name: DELAY_MS
-              value: "500"
+          # env:
+          #   - name: API_URL
+          #     value: http://api-node.demo-app.svc.cluster.local:3000
+          #   - name: DELAY_MS
+          #     value: "500"
           # Could alternatively move these to a configmap
-          # envFrom:
-          #   - configMapRef:
-          #       name: load-generator-config
+          envFrom:
+            - configMapRef:
+                name: load-generator-config
           resources:
             limits:
               memory: "50Mi"
