--- a/07-deploying-demo-application/postgresql/Secret.db-password.yaml
+++ b/07-deploying-demo-application/postgresql/Secret.db-password.yaml
@@ -6,4 +6,5 @@ metadata:
   namespace: demo-app
 type: Opaque
 stringData:
-  DATABASE_URL: postgres://postgres:foobarbaz@postgres-postgresql.postgres.svc.cluster.local:5432/postgres
+  DATABASE_URL: postgres://postgres:foobarbaz@postgres-postgresql.postgresx.svc.cluster.local:5432/postgres
+  # cat /etc/resolv.conf in Postgres pod to get the cluster DNS suffix
