--- a/06-demo-application/api-node/Taskfile.yaml
+++ b/06-demo-application/api-node/Taskfile.yaml
@@ -2,14 +2,14 @@ version: "3"
 
 vars:
   DATABASE_URL: "postgres://postgres:foobarbaz@localhost:5432/postgres"
-  IMAGE_REPO: sidpalas/devops-directive-docker-course-api-node
+  IMAGE_REPO: sonthh98/devops-directive-docker-course-api-node
   IMAGE_TAG: foobarbaz
 
 tasks:
   build-container-image:
     desc: Build container image
     cmds:
-      - docker build -t {{.IMAGE_REPO}}{{.IMAGE_TAG}} .
+      - docker build -t {{.IMAGE_REPO}}:{{.IMAGE_TAG}} .
 
   build-container-image-multi-arch:
     desc: Build multi-arch container image
