add typo to productcatalogservice selector

--- a/11-debugging/microservices-demo.yaml
+++ b/11-debugging/microservices-demo.yaml
@@ -250,7 +250,8 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: productcatalogservice
+    # app: productcatalogservice
+    app: productcatalogservise
   ports:
     - name: grpc
       port: 3550
