Fix sts service name

--- a/04-built-in-resource-types/PersistentVolume/kind/StatefulSet.individual-pvcs-kind.yaml
+++ b/04-built-in-resource-types/PersistentVolume/kind/StatefulSet.individual-pvcs-kind.yaml
@@ -3,7 +3,7 @@ kind: StatefulSet
 metadata:
   name: individual-pvcs-kind
 spec:
-  serviceName: "nginx"
+  serviceName: "individual-pvcss"
   replicas: 2
   selector:
     matchLabels:
